foi colocado mais uma imagem

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
 
     </P>
+    <img src="https://http2.mlstatic.com/box-diario-de-um-banana-5-volumes-pocket-edico-e-D_NQ_NP_773488-MLB31870578969_082019-F.jpg" alt="">
 
 </body>
 
